--- a/composer.json
+++ b/composer.json
@@ -95,7 +95,8 @@
         "symfony/polyfill-apcu": "~1.1",
         "symfony/security-acl": "~2.8|~3.0",
         "phpdocumentor/reflection-docblock": "^3.0",
-        "sensio/framework-extra-bundle": "^3.0.2"
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "nikic/php-parser": "~2.0"
     },
     "conflict": {
         "phpdocumentor/reflection-docblock": "<3.0",
